--- a/index.css
+++ b/index.css
@@ -62,10 +62,11 @@ body {
 }
 
 .banner {
-    width: 100%;
+    position: relative;
     background-color: var(--primaria);
     width: 100%;
-    height: 80vh;}
+    height: 80vh;
+}
 
 .banner#capa  {
     gap: var(--gap-g);
@@ -107,6 +108,13 @@ body {
     font-size: var(--tam-m);
     font-weight: 300;
     color: var(--branco);
+}
+
+.imagem-banner {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 300px;
 }
 
 .separador-topico {
@@ -170,7 +178,6 @@ body {
     background-color: var(--branco);
     width: 90%;
     max-width: 500px;
-    height: max-content;
     padding-top: var(--gap-m);
     padding-bottom: var(--gap-m);
     border-radius: 15px;
@@ -222,6 +229,7 @@ body {
 .btn-link {
     background-color: var(--secundaria);
     width: 80%;
+    max-width: 300px;
     height: 40px;
     border-radius: 30px;
     color: var(--cinza-escuro);
@@ -237,6 +245,11 @@ body {
     background-color: var(--secundaria-hover);
 }
 
+#fim-pg {
+    width: 100%;
+    height: max-content;
+}
+
 .banner#sobre-professor {
     height: max-content;
     padding: var(--gap-max);
@@ -247,6 +260,28 @@ body {
 #sobre-professor .subtitulo {
     font-size: var(--tam-p);
     text-align: center;
+}
+
+#prof-banner-fim-pg {
+    user-select: none;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    filter: brightness(110%), contrast(150%);
+    border: var(--roxo-escuro) 5px solid;
+    background-color: var(--amarelo-destaque);
+    transition: transform 0.3s ease;
+    box-shadow:
+        0 2px 4px rgba(64, 64, 64, 0.12),
+        0 8px 16px rgba(64, 64, 64, 0.1);
+}
+
+#prof-banner-fim-pg:hover, #prof-banner-fim-pg:active {
+    transform: scale(1.1);
+    box-shadow:
+        0 4px 8px rgba(64, 64, 64, 0.15),
+        0 12px 24px rgba(64, 64, 64, 0.12);
 }
 
 .rodape, .colunas-rdp {
@@ -266,12 +301,13 @@ body {
 
 .rodape .titulo2 {
     color: var(--cinza-claro);
-    font-weight: 500;
+    font-weight: 600;
     font-size: var(--tam-m);
 }
 
 .colunas-rdp {
     gap: var(--gap-p);
+    max-width: 400px;
 }
 
 .link-rdp {
@@ -286,5 +322,18 @@ body {
 @media screen and (min-width: 920px) {
     .grid-cartoes {
         grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .rodape {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: var(--gap-max);
+    }
+}
+
+@media screen and (min-width: 720px) {
+    .imagem-banner {
+        width: 400px;
     }
 }
