--- a/index.css
+++ b/index.css
@@ -108,6 +108,8 @@ body {
     font-size: var(--tam-m);
     font-weight: 300;
     color: var(--branco);
+    z-index: 10;
+    text-shadow: 1px 1px var(--roxo-escuro);
 }
 
 .imagem-banner {
@@ -115,6 +117,7 @@ body {
     bottom: 0;
     left: 0;
     width: 300px;
+    z-index: 9;
 }
 
 .separador-topico {
